deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: typescale
  labels:
    app.kubernetes.io/name: typescale
