deploy/kubernetes/app-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: typescale-public
  namespace: typescale
spec:
  selector:
    app.kubernetes.io/name: typescale
    app.kubernetes.io/component: application
  ports:
    - name: http
      port: 80
      targetPort: http
  type: LoadBalancer
