deploy/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: typescale
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  type: ClusterIP
